# ghostlink

./: README.md
ghostlink/ghostlink-android/: gradle.properties  settings.gradle.kts
ghostlink/ghostlink-android/app/: build.gradle.kts
ghostlink/ghostlink-android/app/src/main/: AndroidManifest.xml
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/: GhostLinkApp.kt  MainActivity.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/crypto/: KeyBundleManager.kt  MediaEncryptor.kt  SignalManager.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/local/db/: GhostLinkDatabase.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/local/db/dao/: DAOs.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/local/db/entity/: Entities.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/local/keystore/: SecureKeyStore.kt  SessionStore.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/remote/api/: AuthInterceptor.kt  GhostLinkApi.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/remote/dto/: Dtos.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/remote/websocket/: ReconnectManager.kt  WsClient.kt  WsMessageHandler.kt  WsWireMessage.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/data/repository/: AuthRepository.kt  ChatRepository.kt  ContactRepository.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/di/: AppModule.kt  CryptoModule.kt  DatabaseModule.kt  NetworkModule.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/ui/navigation/: NavGraph.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/ui/screens/chat/: ChatListScreen.kt  ConversationScreen.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/ui/screens/onboarding/: LoginScreen.kt  RegisterScreen.kt  WelcomeScreen.kt
ghostlink/ghostlink-android/app/src/main/java/com/ghostlink/app/ui/screens/settings/: SettingsScreen.kt
ghostlink/ghostlink-android/app/src/main/res/values/: strings.xml  themes.xml
ghostlink/ghostlink-android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
ghostlink/ghostlink-android/gradle/: libs.versions.toml
ghostlink/ghostlink-ios/: Package.swift
ghostlink/ghostlink-ios/GhostLink/App/: AppDelegate.swift  GhostLinkApp.swift
ghostlink/ghostlink-ios/GhostLink/Core/Crypto/: SignalManager.swift
ghostlink/ghostlink-ios/GhostLink/Core/Database/: DatabaseManager.swift
ghostlink/ghostlink-ios/GhostLink/Core/Keychain/: KeychainManager.swift
ghostlink/ghostlink-ios/GhostLink/Core/Network/: APIClient.swift  WebSocketClient.swift
ghostlink/ghostlink-ios/GhostLink/Views/: ChatListView.swift  ConversationView.swift  LoginView.swift  MainTabView.swift  RegisterView.swift  SettingsView.swift  WelcomeView.swift
ghostlink/ghostlink-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
ghostlink/ghostlink-server/.github/workflows/: ci.yml
ghostlink/ghostlink-server/crates/ghostlink-api/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-api/src/: config.rs  error.rs  lib.rs  main.rs  router.rs
ghostlink/ghostlink-server/crates/ghostlink-api/src/handlers/: account.rs  auth.rs  contacts.rs  health.rs  keys.rs  messages.rs  mod.rs  websocket.rs
ghostlink/ghostlink-server/crates/ghostlink-api/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
ghostlink/ghostlink-server/crates/ghostlink-api/src/models/: requests.rs  responses.rs
ghostlink/ghostlink-server/crates/ghostlink-core/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-core/src/: account.rs  contact.rs  crypto.rs  group.rs  lib.rs  message.rs  types.rs
ghostlink/ghostlink-server/crates/ghostlink-db/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-db/src/: connection.rs  lib.rs  migrations.rs
ghostlink/ghostlink-server/crates/ghostlink-db/src/cache/: mod.rs  presence_cache.rs  session_cache.rs
ghostlink/ghostlink-server/crates/ghostlink-db/src/repos/: account_repo.rs  contact_repo.rs  group_repo.rs  key_repo.rs  message_repo.rs  mod.rs
ghostlink/ghostlink-server/crates/ghostlink-media/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-media/src/: cleanup.rs  lib.rs  storage.rs  upload.rs
ghostlink/ghostlink-server/crates/ghostlink-push/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-push/src/: apns.rs  dispatcher.rs  fcm.rs  lib.rs
ghostlink/ghostlink-server/crates/ghostlink-ws/: Cargo.toml
ghostlink/ghostlink-server/crates/ghostlink-ws/src/: hub.rs  lib.rs  nats_bridge.rs  protocol.rs  router.rs  session.rs
project-details/: API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  CLAUDE_AGENT_CONTEXT.md  COMPLETE_CODEBASE_EXPLAINED.md  GHOSTLINK_MASTER_PROMPT_V2.md  MASTER_PROMPT.md  MOBILE_AGENT_TASKS.md  PRD.md  PRIVACY_POLICY.md  README.md  RUST_AGENT_TASKS.md  SECURITY_SPEC.md  TECHNICAL_SPEC.md  TERMS_AND_CONDITIONS.md  implementation_plan.md
