[package]
name = "ghostlink-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
zeroize.workspace = true
validator.workspace = true
regex.workspace = true
lazy_static.workspace = true
