[package]
name = "ghostlink-push"
version.workspace = true
edition.workspace = true

[dependencies]
ghostlink-core = { path = "../ghostlink-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-nats.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken.workspace = true
chrono.workspace = true
anyhow.workspace = true
